# Axion

./: README.md
.github/workflows/: cd.yml  ci.yml
.husky/: pre-commit
contract/: Anchor.toml  README.md
contract/programs/contract/src/: constants.rs  errors.rs  lib.rs
contract/tests/: contract.ts  depin_test.ts
indexer/: .env.example  Cargo.toml  Dockerfile
indexer/src/: args.rs  config.rs  grpc.rs  instructions.rs  main.rs  notifier.rs  parser.rs  ws.rs
ops/: argocd.yml  certificate.yml  deployment.yml  ingress.yml  service.yml
web-services/: package.json
web-services/apps/backend/: index.ts  package.json  redis.ts
web-services/apps/backend/routes/: depinVm.ts  indexer.ts  user.ts  vm.ts  vmInstance.ts
web-services/apps/backend/utils/: helpers.ts
web-services/apps/depin-worker/: package.json
web-services/apps/depin-ws-relayer/: index.ts  package.json
web-services/apps/frontend/: index.html  package.json  vite.config.ts
web-services/apps/frontend/idl/: contract.json
web-services/apps/frontend/public/: robots.txt  sitemap.xml
web-services/apps/frontend/src/: App.css  App.tsx  config.ts  contractidl.ts  main.tsx  runtimeEnv.ts  vite-env.d.ts
web-services/apps/host-agent/: config.ts  install.sh
web-services/apps/host-agent/commands/: register.ts  start.ts
web-services/apps/worker/: contract.ts  contractIdl.ts  index.ts  package.json  tsconfig.json
web-services/apps/ws-relayer/: index.ts  package.json
web-services/docker/: backend.dockerfile  depin-ws-relayer.dockerfile  frontend.dockerfile  worker.dockerfile  ws-relayer.dockerfile
(+109 files in other folders)
