[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[features]
default = []
grpc = ["yellowstone-grpc-client", "yellowstone-grpc-proto", "tonic"]

[dependencies]
solana-client = "2.2"
solana-sdk = "2.2"
solana-transaction-status = "2.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
bs58 = "0.5"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", features = ["json"] }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"

# Optional gRPC dependencies
yellowstone-grpc-client = { version = "13", optional = true }
yellowstone-grpc-proto = { version = "12", optional = true }
tonic = { version = "0.14", optional = true }
